# admybrand-AdMyVision

./: .dockerignore  CAMERA_FIX_README.md  DOCKER_README.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  MOBILE_STREAMING_COMPLETE_GUIDE.md  MOBILE_STREAMING_GUIDE.md  README.md  SOLUTION_COMPLETE.txt  app.py  app_deepspeech.py  app_minimal.py  camera_access_validator.py  camera_test.html  cert.pem  chrome_setup_guide.html  clean_mobile_test.py  docker-compose.yml  download_models.py  enhanced_object_detection.py  generate_qr_codes.py  key.pem  metrics.json  mobile_camera_test.html  mobile_test.py  package-lock.json  pyproject.toml  requirements-cloud.txt  requirements.txt  run.bat  run.ps1  run.sh  setup_complete.bat  setup_server.py  simple_mobile_test.py  standalone_mobile_test.py  start.bat  start.sh  start_https.bat  start_ngrok.bat  (+5 more)
.devcontainer/: devcontainer.json
.streamlit/: packages.txt  secrets.toml.example
backend/: metrics_collector.py  object_detector.py  server.py  webrtc_handler.py
bench/: run_bench.sh
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: index.html  index.js
mobile_streaming_test/: app.py
pages/: 1_object_detection.py  2_fixed_object_detection.py  3_fixed_object_detection.py
streamlit_webrtc/frontend/: package-lock.json
