[project]
name = "admybrand-admyvision"
version = "1.0.0"
description = "Real-time Object Detection with Voice Announcements"
authors = [{ name = "NobinSijo7T", email = "nobinsijo7t@example.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "streamlit>=1.28.0",
    "streamlit-webrtc>=0.47.0",
    "opencv-python-headless==4.8.1.78",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "aiortc>=1.6.0",
    "av>=10.0.0",
    "pyttsx3>=2.90",
    "gtts>=2.3.0",
    "pygame>=2.5.0",
    "qrcode>=7.4.0",
    "requests>=2.31.0",
    "packaging>=20.0",
]

[project.urls]
Repository = "https://github.com/NobinSijo7T/admybrand-AdMyVision"
Homepage = "https://github.com/NobinSijo7T/admybrand-AdMyVision"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
